Bug 96525 - Delay loading of strres dll when setting profile. r=tao@netscape.com/sr=alecf@betscape.com